--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "image-djs",
-	"version": "1.1.1",
+	"version": "1.1.2",
 	"description": "¡Generador de imagenes para tu bot de Discord!",
-	"main": "./dist/index.js",
-	"typings": "./dist/index.d.ts",
+	"main": "./lib/index.js",
+	"typings": "./typings/index.d.ts",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/drgatoxd/image-djs"
