--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
 	"compilerOptions": {
-		"lib": ["ES2015"],
+		"lib": ["ES6"],
 		"module": "commonjs",
 		"moduleResolution": "node",
-		"target": "ES5",
-		"outDir": "dist",
+		"target": "ES6",
+		"outDir": "typings",
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
@@ -17,7 +17,8 @@
 		"checkJs": true,
 		"strict": false,
 		"strictNullChecks": false,
-		"declaration": true
+		"declaration": true,
+		"emitDeclarationOnly": true
 	},
-	"include": ["src"]
+	"include": ["lib"]
 }
