refactor: use typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,51 @@
+// Remember to install tsconfig-paths (yarn add --dev tsconfig-paths)
 {
 	"compilerOptions": {
-		"lib": ["ES6"],
 		"module": "commonjs",
 		"moduleResolution": "node",
-		"target": "ES6",
-		"outDir": "typings",
-		"esModuleInterop": true,
-		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true,
-		"allowSyntheticDefaultImports": true,
-		"skipLibCheck": true,
-		"skipDefaultLibCheck": true,
-		"resolveJsonModule": true,
-		"importHelpers": true,
+		"noImplicitAny": true,
+		"allowUnreachableCode": false,
+		"alwaysStrict": true,
 		"allowJs": true,
-		"checkJs": true,
-		"strict": false,
-		"strictNullChecks": false,
+		"exactOptionalPropertyTypes": false,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"strict": true,
+		"strictFunctionTypes": true,
+		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
+		"useUnknownInCatchVariables": true,
+		"outDir": "./dist",
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"resolveJsonModule": true,
 		"declaration": true,
-		"emitDeclarationOnly": true
+		"declarationDir": "./types",
+		"declarationMap": false,
+		"importsNotUsedAsValues": "error",
+		"inlineSourceMap": false,
+		"newLine": "crlf",
+		"removeComments": true,
+		"sourceMap": false,
+		"maxNodeModuleJsDepth": 1,
+		"forceConsistentCasingInFileNames": true,
+		"keyofStringsOnly": true,
+		"experimentalDecorators": true,
+		"lib": ["es2021"],
+		"target": "es6",
+		"skipLibCheck": true,
+		"rootDir": "./src",
+		"baseUrl": "./src"
 	},
-	"include": ["lib"]
+	"exclude": ["node_modules", "**/*.spec.ts"],
+	"include": ["src"],
+	"ts-node": {
+		"require": ["tsconfig-paths/register"]
+	}
 }
