--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "image-djs",
-	"version": "2.3.4",
+	"version": "2.3.5",
 	"description": "¡Generador de imagenes para tu bot de Discord!",
-	"main": "./lib/index.js",
-	"typings": "./typings/index.d.ts",
+	"main": "./dist/index.js",
+	"typings": "./types/index.d.ts",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/drgatoxd/image-djs"
@@ -22,13 +22,13 @@
 	"author": "drgato",
 	"license": "MIT",
 	"dependencies": {
-		"canvas": "^2.9.0",
+		"canvas": "^2.10.1",
 		"canvas-image-cover": "^2.0.2",
-		"discord.js": "^13.6.0",
-		"tslib": "^2.3.1"
+		"discord.js": "^14.6.0",
+		"tslib": "^2.4.0"
 	},
 	"devDependencies": {
-		"@types/node": "^17.0.21",
-		"typescript": "^4.6.2"
+		"@types/node": "^17.0.45",
+		"typescript": "^4.8.4"
 	}
 }
