--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,8 +44,5 @@
 		"baseUrl": "./src"
 	},
 	"exclude": ["node_modules", "**/*.spec.ts"],
-	"include": ["src"],
-	"ts-node": {
-		"require": ["tsconfig-paths/register"]
-	}
+	"include": ["src"]
 }
